apply OpenRewrite suggestions